@@ -11,6 +11,7 @@
   into classes
 * ConfigParser can now ignore unknown options
 * converted num to numeric in Validation (for consistency)
+* changed 'values' to 'options' in select and list_select
 
 == 0.4.2 / 2009-03-30
 
